--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -146,6 +146,10 @@
     fill: var(--gray-900);
   }
 
+  .techButton {
+    margin: 1rem;
+    width: 20%;
+  }
   .techButton:hover {
   transform: scale(1.1);
   background-color:var(--theme-lgreen);
@@ -313,14 +317,70 @@
     </p-carousel>
     </div>
   </div>
+  <div style="height: 100%; margin-top: 5%;">
+    <h1 style="color: var(--theme-grey); font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 3rem; text-align: center; margin-bottom: 0.5rem;">My Games:</h1>
+    <div style="width: 50%; margin:auto">
+      <p-carousel [value]="projects" [numVisible]="2" [numScroll]="1" [circular]="true">
+        <ng-template let-project pTemplate="card">
+            <div class="card">
+              <table id="container">
+                <tr>
+                    <td valign="top" style="text-align: center; align-content: center;">
+                      <ng-container *ngIf="project.img; else elseBlock">
+                        <div style="margin-top: 5%;"><img src={{project.img}} alt={{project.name}} style="width: 300px;height: 200px;"></div>
+                      </ng-container>
+                      <ng-template #elseBlock>
+                        <div style="height: 200px; margin: auto;">
+                          <h4 style="font-family: Helvetica, sans-serif; font-size: 3rem; margin:auto; padding-top: 25%;">{{ project.name }}</h4>
+                        </div>
+                        
+                      </ng-template>
+                      <div style="font-family: Arial, Helvetica, sans-serif; font-size: 1.3rem; height: fit-content; color:var(--theme-grey);">{{ project.description }}</div>
+                    </td>
+                </tr>
+                <tr>
+                    <td valign="bottom">
+                      <div style="margin-bottom: 5%; display: flex; justify-content: space-around; padding-top: 1rem;">
+                        <a
+                        class="pill"
+                        [href]=project.link
+                        target="_blank"
+                        rel="noopener"
+                        style="width: fit-content; align-self: center;"
+                      >
+                        <span>Link to Project</span>
+                        <svg
+                          xmlns="http://www.w3.org/2000/svg"
+                          height="14"
+                          viewBox="0 -960 960 960"
+                          width="14"
+                          fill="currentColor"
+                          style="padding-left: 0.5rem;"
+                        >
+                          <path
+                            d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h280v80H200v560h560v-280h80v280q0 33-23.5 56.5T760-120H200Zm188-212-56-56 372-372H560v-80h280v280h-80v-144L388-332Z"
+                          />
+                        </svg>
+                      </a>
+                      </div>
+                    </td>
+                </tr>
+              </table>
+            </div>
+        </ng-template>
+    </p-carousel>
+    </div>
+  </div>
   <div>
     <h1 style="color: var(--theme-grey); font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 3rem; text-align: center; margin-bottom: 0.5rem;">Teckstack:</h1>
     <div style="width:50%; margin:auto;">
-      <div >
-        <button pButton type="button" [outlined]="true" [raised]="true" text="true" (click)="getAngularLink()" class="techButton">
-          <div style="margin-top: 5%;"><img src="/assets/angular.svg" alt="Angular logo" style="width:100px;height:100px;"></div>
-          <div style="color: var(--theme-grey); font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 1.5rem;"> Angular </div>
-        </button>
+      <div style="display: flex; justify-content: center; flex-wrap: wrap;">
+        <ng-template ngFor let-teckstack [ngForOf]="techstacks" let-i="index">
+          <button pButton type="button" [outlined]="true" [raised]="true" text="true" (click)="openLink(teckstack.link)" class="techButton">
+            <div style="margin-top: 5%;"><img src={{techstacks[i].img}} alt={{techstacks[i].name}} style="width:100px;height:100px;"></div>
+            <div style="color: var(--theme-grey); font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size: 0.9vw; width: 100%;"> {{techstacks[i].name}} </div>
+          </button>
+        </ng-template>    
       </div>
     </div>
 
